--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   /* min-height: 100svh; */
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  font-family: sans-serif;
 }
 
 a:not([class]) {
